--- a/wiki/DomIterator.wiki
+++ b/wiki/DomIterator.wiki
@@ -1,4 +1,3 @@
-
 Class that iterates through the DOM, returning elements that match a criteria defined in a matcher.
 
 = Introduction =
@@ -80,6 +79,12 @@ for (Element element : new DomIterator(new SingleClassnameCaseSensitiveMatcher("
 Check the source code of any matcher as an example to implement your own matcher.
 
 Performance:
+
 Iteration through 2700 elements on a Duo Core 1.66Ghz laptop takes:
- * 5,000ms (5sec) in hosted mode
- * 
+ * 4,600ms (4.6sec) in hosted mode
+ * 87ms (yes, 87ms) in Firefox 3.0.4
+ * 156ms in Internet Explorer 6 (IE6)
+
+See the tests and examples in DomIteratorDemo.java.
+
+There is no JUnit tests in the GWT project because the GWT/JUnit architecture doesn't pass an HTML page to the tests. The DOM structure would have to be built by program in the unit test setup, a bit time consuming for a 2700 element structure.
