--- a/wiki/PickerPanel.wiki
+++ b/wiki/PickerPanel.wiki
@@ -6,6 +6,12 @@ How to use the PickerPanel and the ColorPicker derived from it.
 
 The PickerPanel is a generic picker that works with a PickerCellManager and IPickerCells. The PickerPanel can by subclassed to implement specialized instances, like the ColorPicker shown as an example. 
 
+The PickerDemo project shows how to use the different implementations of the ColorPicker. Use it if you simply want to use the ColorPicker in one of your projects.
+
+The ColorPickerTest project contains the full source of the PickerPanel components and the ColorPicker implementations. Check this project out if you need to implement your own picker or want to change the behavior of the existing ones.
+
+There is no Javascript involved, everything is in Java in the GWT environment. Therefore the code should work in all the browsers supported by GWT 1.5.
+
 = Details =
 
 Screen shots of PickerPanel used as a ColorPicker
